--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.CadastroActivity"></activity>
+        <activity android:name=".activity.PrincipalActivity"></activity>
+        <activity android:name=".activity.CadastroActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity
             android:name=".activity.MainActivity"
