--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.PrincipalActivity"></activity>
+        <activity android:name=".activity.DespesasActivity" android:theme="@style/DespesaTheme"></activity>
+        <activity android:name=".activity.ReceitasActivity" android:theme="@style/ReceitaTheme" />
+        <activity android:name=".activity.PrincipalActivity" />
         <activity android:name=".activity.CadastroActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity
